# lightdash_mcp

./: .editorconfig  .env.template  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  Justfile  LICENSE  README.md  README_CN.md  SECURITY.md  pyproject.toml  skills-lock.json
.claude/: settings.local.json
.github/workflows/: ci.yml  self-check.yml
deploy/: .dockerignore  .env.example  .env.template  Dockerfile  docker-compose.yml
docs/plans/: 2026-04-20-open-source-release.md
lightdash_mcp/: __init__.py  __main__.py  lightdash_client.py  server.py  tools_registry.yml
lightdash_mcp/tools/: __init__.py  base_tool.py  create_chart.py  create_dashboard.py  create_dashboard_tile.py  create_space.py  dashboard_utils.py  delete_chart.py  delete_dashboard_tile.py  delete_space.py  duplicate_dashboard.py  get_chart_details.py  get_custom_metrics.py  get_dashboard_code.py  get_dashboard_tile_chart_config.py  get_dashboard_tiles.py  get_explore_schema.py  get_project.py  list_charts.py  list_dashboards.py  list_explores.py  list_projects.py  list_spaces.py  list_table_field_values.py  question_annotation.py  rename_dashboard_tile.py  run_chart_query.py  run_dashboard_tiles.py  run_question_annotation.py  run_raw_query.py  search_charts.py  update_chart.py  update_dashboard_filters.py  update_dashboard_tile.py  utils.py
tests/: test_registry.py
tests/http/: http_tools_demo.py  test.http  test_http_tools.py
